2005-03-16  Bradley Bell  <btb@icculus.org>

	* ui/mouse.c: gcc doesn't like multi-line // comments

	* main/dumpmine.c: get rid of compiler warnings

2005-03-15  Bradley Bell  <btb@icculus.org>

	* 3d/interp.c: Disabled shading of flat (non-textured) polygons.
	Fixes laser and plasma lighting bug, hopefully doesn't break
	anything else.

	* main/state.c: Fix crash if Num_walls=0

2005-03-12  Bradley Bell  <btb@icculus.org>

	* Makefile.am, configure.ac: enable editor in unix-style builds

2005-03-12  Chris Taylor  <chris@icculus.org>

	* main/gamesave.c: could check reactor model num, don't check
	reactor object shields (not used anyway, it's stored/calculated
	elsewhere)

2005-03-06  Chris Taylor  <chris@icculus.org>

	* main/piggy.c: load the descent 1 color palette when NDEBUG is
	defined

	* main/editor/seguvs.c: check the uvs after they're assigned

2005-02-27  Chris Taylor  <chris@icculus.org>

	* main/editor/med.c, ui/file.c, ui/keypress.c, ui/menu.c,
	ui/menubar.c, ui/message.c, ui/number.c, ui/popup.c: call
	gr_update in event loops

	* include/ui.h, ui/file.c, ui/listbox.c: use PhysicsFS in
	file.c, involves modifying the listbox so it can use
	an array of string pointers

2005-02-26  Chris Taylor  <chris@icculus.org>

	* ui/keypad.c, ui/ui.c: no unnecessarily including MS DOS
	headers

	* ui/window.c: only disable the keyboard for MS DOS

	* main/editor/eswitch.c: add remove_trigger_num
	(used by gamesave.c)

	* main/bmread.c, main/inferno.c: if EDITOR is defined, game 
	still works if there's no BITMAPS.TBL in a PhysicsFS search path

	* main/inferno.c: determine properly if 800x600 resolution is
	available (for editor)

	* main/editor/autosave.c, main/editor/macro.c, main/editor/med.c,
	main/editor/medsel.c, ui/checkbox.c, ui/file.c, ui/gadget.c,
	ui/inputbox.c, ui/keypad.c, ui/menu.c, ui/menubar.c, ui/radio.c,
	ui/window.c: use d_malloc, d_calloc, d_strdup and d_free

	* ui/keypad.c: fix the reading of keypad (.pad) files 
